--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -1,3 +1,4 @@
+{
     "env": {
         "es2021": true,
         "node": true
@@ -36,6 +37,16 @@
                 "js": "never",
                 "ts": "never"
             }
-        ]
-    },
+        ],
+        "no-underscore-dangle": [
+            "error",
+            {
+                "allow": [
+                    "_id"
+                ]
+            }
+        ],
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": "error"
+    }
 }
