--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "npm run build && scp -Сr ./build/* praktikum@51.250.94.150:/home/praktikum/mesto-frontend",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
