--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,6 @@ JWT_SECRET = 'some-secret-key-3000'
 DB_ADDRESS = 'mongodb://127.0.0.1:27017/mestodb'
 DEPLOY_USER = 'happy-land'
 DEPLOY_HOST =  51.250.94.150
-DEPLOY_REF = 'dev'
+DEPLOY_REF = 'master'
 DEPLOY_PATH = '~/mesto-backend'
 DEPLOY_REPO = 'git@github.com:happy-land/web-plus-pm2-deploy.git'
